--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,28 @@
-<div ng-repeat="book in books">
-  <pre>{{book | json}}</pre>
+
+<div class='discover-section'>
+  <input type="text" ng-model="query">
+
+  <div class='discover-section__content'>
+    Here are a few of our favourite reads. To browse our full range,
+    <a class="link--plain" href="http://staging.blloon.com/dl">
+      download Blloon
+    </a>
+    .
+  </div>
+  <div class='discover-section__highlights highlights'>
+    <div class='feature highlights__box lime' ng-repeat="book in books">
+      <a class="book" href="">
+        <div class='book-cover' ng-style="{ 'background-image': url('{{book.medium_cover_image_url}}')}">
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class='discover-section__cta'>
+    <a class="btn btn--outline" href="http://staging.blloon.com/dl">
+      Download Blloon
+    </a>
+  </div>
 </div>
+
+</div>
+
