--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,30 @@
 // bower:scss
 // endbower
 
+@font-face {
+    font-family:"Tiempos";src:url("fonts/TiemposTextWeb-Regular.woff") format("woff"),url("fonts/TiemposTextWeb-Regular.ttf") format("truetype");font-weight:normal;font-style:normal;
+}
+
+@font-face {
+    font-family:"Tiempos";src:url("fonts/TiemposTextWeb-RegularItalic.woff") format("woff"),url("fonts/TiemposTextWeb-RegularItalic.ttf") format("truetype");font-weight:normal;font-style:italic;
+}
+
+@font-face {
+    font-family:"Metric";src:url("fonts/MetricWeb-Light.woff") format("woff"),url("fonts/MetricWeb-Light.ttf") format("truetype");font-weight:300;font-style:normal;
+}
+
+@font-face {
+    font-family:"Metric";src:url("fonts/MetricWeb-Medium.woff") format("woff"),url("fonts/MetricWeb-Medium.ttf") format("truetype");font-weight:normal;font-style:normal;
+}
+
+@font-face {
+    font-family:"Metric";src:url("fonts/MetricWeb-Black.woff") format("woff"),url("fonts/MetricWeb-Black.ttf") format("truetype");font-weight:bold;font-style:normal;
+}
+
+@font-face {
+    font-family:"Metric";src:url("fonts/MetricWeb-LightItalic.woff") format("woff"),url("fonts/MetricWeb-LightItalic.ttf") format("truetype");font-weight:normal;font-style:italic;
+}
+
 body {
   font: 112.5%/1.45 "Metric", Tahoma, sans-serif;
   background-color: #181818;
