--- a/app/styles/search.scss
+++ b/app/styles/search.scss
@@ -161,7 +161,7 @@ $black_8: rgba(0,0,0,0.08);
         -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
         box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
         &:focus {
-            box-shadow: 0 0 1px 1px red;
+            box-shadow: 0 0 1px 1px $color_green_haze_approx;
         }
     }
 
