show actual images in search results

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
   <div class='search-section__highlights highlights'>
     <div class='feature highlights__box lime' ng-repeat="book in books">
       <a class="book" href="">
-        <div class='book-cover' ng-style="{ 'background-image': url('{{book.medium_cover_image_url}}')}">
+        <div class='book-cover' background-image="book.medium_cover_image_url">
         </div>
       </a>
     </div>
