--- a/app/styles/blloon.scss
+++ b/app/styles/blloon.scss
@@ -656,27 +656,27 @@ input[type=checkbox],input[type=radio] {
 }
 
 @font-face {
-    font-family:"Tiempos";src:url("fonts/TiemposTextWeb-Regular.woff") format("woff"),url("fonts/TiemposTextWeb-Regular.ttf") format("truetype");font-weight:normal;font-style:normal;
+    font-family:"Tiempos";src:url("../fonts/TiemposTextWeb-Regular.woff") format("woff"),url("../fonts/TiemposTextWeb-Regular.ttf") format("truetype");font-weight:normal;font-style:normal;
 }
 
 @font-face {
-    font-family:"Tiempos";src:url("fonts/TiemposTextWeb-RegularItalic.woff") format("woff"),url("fonts/TiemposTextWeb-RegularItalic.ttf") format("truetype");font-weight:normal;font-style:italic;
+    font-family:"Tiempos";src:url("../fonts/TiemposTextWeb-RegularItalic.woff") format("woff"),url("../fonts/TiemposTextWeb-RegularItalic.ttf") format("truetype");font-weight:normal;font-style:italic;
 }
 
 @font-face {
-    font-family:"Metric";src:url("fonts/MetricWeb-Light.woff") format("woff"),url("fonts/MetricWeb-Light.ttf") format("truetype");font-weight:300;font-style:normal;
+    font-family:"Metric";src:url("../fonts/MetricWeb-Light.woff") format("woff"),url("../fonts/MetricWeb-Light.ttf") format("truetype");font-weight:300;font-style:normal;
 }
 
 @font-face {
-    font-family:"Metric";src:url("fonts/MetricWeb-Medium.woff") format("woff"),url("fonts/MetricWeb-Medium.ttf") format("truetype");font-weight:normal;font-style:normal;
+    font-family:"Metric";src:url("../fonts/MetricWeb-Medium.woff") format("woff"),url("../fonts/MetricWeb-Medium.ttf") format("truetype");font-weight:normal;font-style:normal;
 }
 
 @font-face {
-    font-family:"Metric";src:url("fonts/MetricWeb-Black.woff") format("woff"),url("fonts/MetricWeb-Black.ttf") format("truetype");font-weight:bold;font-style:normal;
+    font-family:"Metric";src:url("../fonts/MetricWeb-Black.woff") format("woff"),url("../fonts/MetricWeb-Black.ttf") format("truetype");font-weight:bold;font-style:normal;
 }
 
 @font-face {
-    font-family:"Metric";src:url("fonts/MetricWeb-LightItalic.woff") format("woff"),url("fonts/MetricWeb-LightItalic.ttf") format("truetype");font-weight:normal;font-style:italic;
+    font-family:"Metric";src:url("../fonts/MetricWeb-LightItalic.woff") format("woff"),url("../fonts/MetricWeb-LightItalic.ttf") format("truetype");font-weight:normal;font-style:italic;
 }
 
 .baseline {
