adjust viewport height calc

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,14 +4,14 @@
   <div class="search-section__input">
     <input class="input-control"
       autofocus
-      debounce="500"
+      debounce="700"
       ng-model="query"
       placeholder="Type to search..."
       type="text">
   </div>
 
   <div class="search-section__content">
-    For example, <a class="link--plain" ui-sref="main.search({ search: 'Life, the Universe and Everything'})">Life, the Universe and Everything</a>.
+    For example, <a class="link--plain" ui-sref="main.search({ search: 'Life is...'})">Life is...</a>.
   </div>
 
   <div class="search-section__highlights highlights">
